# lexfix_devops

./: .dockerignore  .env.example  .env.vercel  .gitignore  CI_CD_HANDOFF_GUIDE.md  DEVOPS.md  Dockerfile  README.md  TESTING_STRATEGY.md  accessible_language_platform_specification.md  auth.d.ts  components.json  dev2-rem-work.txt  docker-compose.yml  empty_files_list.txt  homeschool_support_documentation.md  lint_final.txt  lint_output.txt  middleware.ts  next.config.mjs  package-lock.json  package.json  parent_failure_report.txt  parent_failure_report_utf8.txt  parent_test_report.txt  parent_test_report_utf8.txt  playwright.config.ts  prisma.config.ts  prisma_errors.txt  prisma_errors_2.txt  realistic_fullstack_task_split.md  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest_report.txt  vitest_report_utf8.txt
app/: globals-reduced-motion.css  globals.css  layout.tsx  page.tsx  providers.tsx
components/: ADHDLesson.tsx  AccessibilityToolbar.tsx  BrainGameBreak.tsx  DashboardComponents.tsx  MultiModalLesson.tsx  ParentDashboardComponents.tsx  PatternLock.tsx  PracticeComponents.tsx  PronunciationEvaluator.tsx  SpeechRecognition.tsx  TextToSpeech.tsx
lib/: api.ts  auth.ts  db.ts  mongodb.ts  (+5 more)
services/ml-service/: Dockerfile  pyproject.toml  requirements.txt
services/ml-service/app/: __init__.py  main.py
services/ml-service/app/routes/: health.py  pronunciation.py  recommendations.py  text_analysis.py  tts.py
services/ml-service/app/services/: pronunciation_service.py  recommendation_service.py  text_analysis_service.py  tts_service.py
(+205 files in other folders)
