name = "linguaaccess-ml"
version = "0.1.0"
description = "NLP and speech processing service for LinguaAccess"
authors = [{name = "LinguaAccess Team"}]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "transformers==4.34.1",
    "torch==2.1.1",
    "librosa==0.10.0",
    "numpy==1.24.3",
    "scipy==1.11.4",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "soundfile==0.12.1",
    "spacy==3.7.2",
    "google-cloud-speech==2.21.0",
    "google-cloud-texttospeech==2.14.0",
    "requests==2.31.0"
]

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
